MainPage LoginPage and RegisterPage

--- a/src/main/webapp/resources/static/login.html
+++ b/src/main/webapp/resources/static/login.html
@@ -24,7 +24,7 @@
   <label for="password">Password</label>
   <input type="password" placeholder="Password" id="password">
 
-  <button>Log In</button>
+  <button onclick="">Log In</button>
   <div class="social">
     <div class="go"><i class="fab fa-google"></i>  Google</div>
   </div>
